--- a/sync/package.json
+++ b/sync/package.json
@@ -21,7 +21,7 @@
     "src"
   ],
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "test": "jest --passWithNoTests",
@@ -31,7 +31,8 @@
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts,.tsx' --out-dir './dist/esm' --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts,.tsx' --out-dir 'dist/cjs' --source-maps",
     "types": "tsc",
-    "watch": "yarn clean && yarn compile --watch"
+    "build": "bun run clean && bun run build:esm && bun run build:cjs && bun run types",
+    "watch": "bun run clean && bun run build && bun run build:esm --watch"
   },
   "dependencies": {
     "@babel/cli": "^7.24.7",
@@ -53,6 +54,7 @@
     "@babel/core": "^7.24.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@types/lodash": "^4.17.4",
     "@types/react": "^18.3.3",
