--- a/sync/tsconfig.json
+++ b/sync/tsconfig.json
@@ -1,19 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "skipLibCheck": true,
     "declaration": true,
     "emitDeclarationOnly": true,
     "declarationMap": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx",
+    "jsxImportSource": "react",
     "outDir": "./dist/types",
-    "baseUrl": ".",
+    "baseUrl": "."
   },
-  "include": [
-    "./src/exports/index.ts",
-    "./src/exports/react-components.ts"
-  ],
+  "include": ["./src/exports/index.ts", "./src/exports/react-components.ts"],
   "exclude": ["../node_modules"]
 }
