--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "@happy-dom/global-registrator": "^14.12.0"
+  }
 }
