--- a/package.json
+++ b/package.json
@@ -5,6 +5,17 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@happy-dom/global-registrator": "^14.12.0"
-  }
+    "@cardano-sdk/core": "^0.33.0",
+    "@cardano-sdk/dapp-connector": "^0.12.18",
+    "@cardano-sdk/util": "^0.15.1",
+    "@happy-dom/global-registrator": "^14.12.0",
+    "@types/libsodium-wrappers-sumo": "^0.7.8",
+    "@types/node": "^20.14.2",
+    "happy-dom": "^14.12.0"
+  },
+  "trustedDependencies": [
+    "fs-native-extensions",
+    "node-datachannel",
+    "utp-native"
+  ]
 }
