--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@cardano-sdk/dapp-connector": "^0.12.18",
     "@cardano-sdk/util": "^0.15.1",
     "@happy-dom/global-registrator": "^14.12.0",
+    "@sundaeswap/asset": "^0.7.1",
     "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/node": "^20.14.2",
     "happy-dom": "^14.12.0"
