--- a/packages/sync/package.json
+++ b/packages/sync/package.json
@@ -31,7 +31,7 @@
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts,.tsx' --out-dir './dist/esm' --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts,.tsx' --out-dir 'dist/cjs' --source-maps",
     "types": "tsc",
-    "build": "bun run clean && bun run build:esm && bun run build:cjs && bun run types",
+    "build": "bun run clean && bun run types && bun run build:esm && bun run build:cjs",
     "watch": "bun run clean && bun run build && bun run build:esm --watch"
   },
   "dependencies": {
