--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   ],
   "devDependencies": {
     "@cardano-sdk/core": "^0.33.0",
-    "@cardano-sdk/dapp-connector": "^0.12.18",
+    "@cardano-sdk/dapp-connector": "^0.12.19",
     "@cardano-sdk/util": "^0.15.1",
     "@happy-dom/global-registrator": "^14.12.0",
     "@sundaeswap/asset": "^0.7.1",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/node": "^20.14.2",
-    "happy-dom": "^14.12.0"
+    "happy-dom": "^14.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.0.2"
   },
   "trustedDependencies": [
     "fs-native-extensions",
