--- a/packages/sync/tsconfig.json
+++ b/packages/sync/tsconfig.json
@@ -1,20 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "NodeNext",
-    "lib": ["es6", "dom"],
-    "moduleResolution": "NodeNext",
-    "skipLibCheck": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "declarationMap": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
     "outDir": "./dist/types",
     "baseUrl": "."
   },
-  "include": ["./src"],
-  "exclude": ["node_modules"]
+  "include": ["./src"]
 }
