--- a/packages/sync/.babelrc
+++ b/packages/sync/.babelrc
@@ -2,7 +2,7 @@
   "plugins": ["@babel/plugin-proposal-class-properties"],
   "env": {
     "esmUnbundled": {
-      "ignore": ["src/**/*.test.ts"],
+      "ignore": ["./src/__tests__"],
       "presets": [
         [
           "@babel/preset-react",
@@ -14,7 +14,7 @@
       ]
     },
     "esmBundled": {
-      "ignore": ["src/**/*.test.ts"],
+      "ignore": ["./src/__tests__"],
       "presets": [
         [
           "@babel/env",
@@ -32,7 +32,7 @@
       ]
     },
     "cjs": {
-      "ignore": ["src/**/*.test.ts"],
+      "ignore": ["./src/__tests__"],
       "presets": [
         [
           "@babel/env",
