--- a/lib/package.json
+++ b/lib/package.json
@@ -7,8 +7,8 @@
   "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js",
       "types": "./dist/types/index.d.ts"
     }
   },
@@ -16,14 +16,13 @@
     "access": "public"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "engines": {
     "node": ">=16.0.0"
   },
   "scripts": {
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --watchAll=false",
     "clean": "rm -rf ./dist",
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --extensions '.ts,.tsx' --out-dir './dist/esm' --source-maps",
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --extensions '.ts,.tsx' --out-dir 'dist/cjs' --source-maps",
