--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "incremental": true,
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "node",
@@ -7,6 +8,7 @@
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
