--- a/lib/tsconfig.build.json
+++ b/lib/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["./src/index.ts"],
+  "include": ["./src/index.ts", "./src/@types/global.d.ts"],
   "exclude": ["**/__data__/**", "**/__tests__", "./setup-tests.ts"]
 }
