--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
   "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "always",
     "source.organizeImports": "explicit"
   },
-  "[go]": {
-    "editor.codeActionsOnSave": {
-      "source.organizeImports": "explicit"
-    }
-  }
+  "editor.formatOnSave": true, // Disable default formatter if ESLint is handling formatting
+  "eslint.format.enable": true,
+  "eslint.useFlatConfig": true
 }
