skip tests for now

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,10 @@ jobs:
       - name: Lint
         run: bun lint
 
-      - name: Test
-        run: |
-          cd lib
-          bun test
+      # - name: Test
+      #   run: |
+      #     cd lib
+      #     bun test
 
       - name: Build
         run: |
