--- a/lib/package.json
+++ b/lib/package.json
@@ -36,19 +36,20 @@
   },
   "dependencies": {
     "@babel/cli": "^7.24.7",
-    "@cardano-sdk/core": "^0.33.0",
-    "@cardano-sdk/dapp-connector": "^0.12.19",
-    "@cardano-sdk/util": "^0.15.1",
     "@fabianbormann/cardano-peer-connect": "^1.2.17",
     "@koralabs/adahandle-sdk": "^1.5.4",
     "@sundaeswap/asset": "^0.7.1",
     "@sundaeswap/fraction": "0.5.9",
-    "lodash": "^4.17.21",
     "rxjs": "^7.8.1"
   },
   "peerDependencies": {
     "react": "^18.3.1",
-    "react-error-boundary": "^4.0.13"
+    "react-error-boundary": "^4.0.13",
+    "@tanstack/react-query": "^5.51.11",
+    "lodash": "^4.17.21",
+    "@cardano-sdk/core": "^0.33.0",
+    "@cardano-sdk/dapp-connector": "^0.12.19",
+    "@cardano-sdk/util": "^0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
