feat: add signing data hook

--- a/lib/package.json
+++ b/lib/package.json
@@ -49,7 +49,8 @@
     "lodash": "^4.17.21",
     "@cardano-sdk/core": "^0.45.0",
     "@cardano-sdk/dapp-connector": "^0.13.3",
-    "@cardano-sdk/util": "^0.15.5"
+    "@cardano-sdk/util": "^0.15.5",
+    "@emurgo/cardano-message-signing-nodejs": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
