--- a/lib/package.json
+++ b/lib/package.json
@@ -66,6 +66,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/libsodium-wrappers-sumo": "^0.7.8",
+    "@tanstack/react-query": "^5.51.11",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20.14.2",
     "@types/node-fetch": "^2.6.11",
