--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sundaeswap/eslint-config": "^2.0.14",
     "globals": "^15.8.0",
     "husky": "^9.1.1",
-    "lint-staged": "^15.2.7"
+    "lint-staged": "^15.2.7",
+    "@types/bun": "^1.3.1"
   }
 }
