--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "devDependencies": {
     "@sundaeswap/babel-preset": "^2.0.12",
     "@sundaeswap/eslint-config": "^2.0.14",
+    "@types/bun": "^1.3.1",
+    "fake-indexeddb": "^6.2.4",
     "globals": "^15.8.0",
     "husky": "^9.1.1",
-    "lint-staged": "^15.2.7",
-    "@types/bun": "^1.3.1"
+    "lint-staged": "^15.2.7"
   }
 }
