--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "node-datachannel",
     "utp-native"
   ],
+  "packageManager": "^bun@1.3.0",
+  "engines": {
+    "node": ">18 <21"
+  },
+  "engineStrict": true,
   "scripts": {
     "prepare": "husky",
     "lint": "eslint . --ignore-pattern '**/dist/**'",
