--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -23,7 +23,7 @@ jobs:
         run: bun lint
 
       - name: Test
-        run: bun test
+        run: bun test --bail
 
       - name: Build
         run: |
